fix the invisible menu issue in safari

--- a/css/scss/general.scss
+++ b/css/scss/general.scss
@@ -913,7 +913,7 @@ header {
         width: 236px;
         min-width: 196px;
         padding: 10px 0;
-        overflow: scroll;
+        overflow: auto;
         background: #FFFFFF;
         box-shadow: -1px 0 0 0 $puregray-300;
         margin-left: 1px;
